--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 <body>
   <h1>COLLEGE MANAGEMENT SYSTEM</h1>
   <hr>
-  <p>This is my <strong>first</strong> web page written in HTML.</p>
+  <h2>List of Colleges</h2>
+  <hr>
+  <p>This is my <strong>first</strong> web page written for college software in HTML.</p>
   <h3>HTML</h3>
   <p>HTML uses <mark>markup tag</mark> to <em>markup</em> a document.</p>
 </body>
