added college list
3 colleges list added to my index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <h1>COLLEGE MANAGEMENT SYSTEM</h1>
   <hr>
   <h2>List of Colleges</h2>
+  <h3>JNTU Anantapur</h3>
+  <h3>MITS</h3>
+  <h3>Golden Valley</h3>
   <hr>
   <p>This is my <strong>first</strong> web page written for college software in HTML.</p>
   <h3>HTML</h3>
