--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <h3>JNTU Anantapur</h3>
   <h3>MITS</h3>
   <h3>Golden Valley</h3>
+  <h3>BT College</h3>
+  <h3>Viswam Engineering College</h3>
   <hr>
   <p>This is my <strong>first</strong> web page written for college software in HTML.</p>
   <h3>HTML</h3>
