added new student venkat

--- a/student_name.html
+++ b/student_name.html
@@ -9,6 +9,7 @@
   <hr>
   <h3>My Name is Kokila, Am from Madanapalle</h3>
   <h3>My Name is Karishma, Am from Kurnool</h3>
+  <h3>My Name is Venkat, Am from Tirupati</h3>
   <hr>
   <p>This is my <strong>first</strong> web page written for names and town in HTML.</p>
   <h3>HTML</h3>
