added college address

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   <h1>COLLEGE MANAGEMENT SYSTEM</h1>
   <hr>
   <h2>List of Colleges</h2>
-  <h3>JNTU Anantapur</h3>
-  <h3>MITS</h3>
-  <h3>Golden Valley</h3>
-  <h3>BT College</h3>
-  <h3>Viswam Engineering College</h3>
+  <h3>JNTU Anantapur, Anantapur</h3>
+  <h3>MITS, Madanapalle</h3>
+  <h3>Golden Valley, Madanapalle</h3>
+  <h3>BT College, Kurnool</h3>
+  <h3>Viswam Engineering College, Madanapalle</h3>
   <h3>SV University, Tirupati</h3>
-  <h3>Vidyaniketan Eng College</h3>
+  <h3>Vidyaniketan Eng College, Tirupati</h3>
   <hr>
   <p>This is my <strong>first</strong> web page written for college software in HTML.</p>
   <h3>HTML</h3>
