new college added

--- a/autonomous.html
+++ b/autonomous.html
@@ -6,9 +6,11 @@
 </head>
 <body>
   <hr>
-  <h2>List of Autonomous Colleges</
-  <h3>Sri Vidyaniketan Engineering College</h3>
-  <h3>MITS College</h3>
+  <h2>List of Autonomous Colleges JNTU, Anantapur</h2>
+  <hr>
+  <h3>1. Sri Vidyaniketan Engineering College</h3>
+  <h3>2. MITS College</h3>
+  <h3>3. Siddharta Eng College</h3>
   <hr>
   <p>This is my <strong>first</strong> web page written for Autonomous Colleges in HTML.</p>
   <h3>HTML</h3>
