new courses added

--- a/course.html
+++ b/course.html
@@ -10,6 +10,8 @@
   <h3>Azure DevOps</h3>
   <h3>.Net Framework</h3>
   <h3>Python</h3>
+  <h3>Manual Testing</h3>
+  <h3>Java, SpringBoot, Microservices</h3>
   <hr>
   <p>This is my <strong>first</strong> web page written for college software in HTML.</p>
   <h3>HTML</h3>
